workspace = { members = ["double_buffer", "grid"] }
[package]
name = "ldgi_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
show-image = { version = "0.14", features = ["image"] }
glam = "0.27"
grid = { path = "grid", features = ["rayon"] }
double_buffer = { path = "double_buffer" }
rayon = "1.10.0"
