[package]
name = "grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lerp = ["dep:lerp"]
rayon = ["dep:rayon"]

[dependencies]
glam = "0.27.0"
lerp = { version = "0.5.0", optional = true }
rayon = { version = "1.10.0", optional = true }
